--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,10 @@
             "css": ["screen.css"],
             "js": ["jquery-1.10.2.min.js", "main.js"]
         }
-    ]
+    ],
+    "icons": {
+        "16": "logo16.png",
+        "48": "logo48.png",
+        "128": "logo128.png"
+    }
 }
